@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Fixed layer context expressions (REQUIRES/LABELREQUIRES) (#3737)
+
 - KML: Output ExtendedData (#3728)
 
 - Fixed OWS usage of multiple layers with same name (#3778)
